--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "jest": "^27.0.6",
+    "jest-json": "^1.0.4",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   }
