--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@remirror/core-types": "1.0.1",
+    "@remirror/core-types": "~1.0.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
